# deltat

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
benches/: stress.rs
client/: package.json
client/src/: index.ts
client/tests/: helpers.ts  integration.test.ts
examples/: client.ts
src/: auth.rs  engine.rs  lib.rs  limits.rs  main.rs  model.rs  notify.rs  observability.rs  reaper.rs  sql.rs  tenant.rs  tls.rs  wal.rs  wire.rs
src/engine/: availability.rs  conflict.rs  error.rs  mod.rs  mutations.rs  queries.rs  store.rs  tests.rs
tests/: listen_notify.rs
web/: package.json
web/app/: layout.tsx  page.tsx
web/app/actions/: availability.ts  bookings.ts  resources.ts  rules.ts  seed.ts
web/app/seats/: page.tsx
web/components/: add-rule-dialog.tsx  booking-dialog.tsx  create-resource-dialog.tsx  day-calendar.tsx  resource-settings-dialog.tsx  resource-tree.tsx  rules-panel.tsx  seat-map.tsx  week-calendar.tsx
web/lib/: db.ts  schemas.ts  store.ts  utils.ts
